@@ -2,6 +2,7 @@ Changelog for Dist::Zilla::PluginBundle::TestingMania
 
 {{$NEXT}}
  * Add mention of Test::Pod::LinkCheck plugin
+ * Update several Test:: plugins
 
 0.012     2011-06-05
  * Add a Test::Version plugin by xenoterrocide; remove superseded plugins
